...
        VStack(spacing: 15) {
            AppTextField(
                title: "Employee Name",
                placeholder: "Ex: Vikram Sukumaran",
                text: $employeeName
            )
            .accessibilityIdentifier("EmployeeNameField")
            
            AppTextField(
                title: "Total Wages",
                placeholder: "Enter the total wages",
                text: $totalWages,
                keyboardType: .numbersAndPunctuation
...
                .frame(height: 50)
                .frame(maxWidth: .infinity)
                .background(Color.AppColors.ThemeNavy)
                .cornerRadius(10)
                .contentShape(RoundedRectangle(cornerRadius: 12))
        }
        .accessibilityIdentifier("SubmitEmployeeButton")
    }
}

